--- a/Módulo 4 - Repetições/4.2_4.3/4.2-For_Break_Continue-Exercícios.ipynb
+++ b/Módulo 4 - Repetições/4.2_4.3/4.2-For_Break_Continue-Exercícios.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a60ef197",
    "metadata": {},
    "outputs": [
@@ -344,10 +344,12 @@
     "n = int (input(\"Digite o númro de linhas: \"))\n",
     "m = int(input(\"Digite o número de colunas: \"))\n",
     "\n",
+    "# Processamento: Primeiro é feito um cabeçalho com o for, que numera as colunas de 1 anté M \n",
     "print(\" \", end = \" \")\n",
     "for col in range(1,m + 1,1):\n",
     "    print(col, end = \" \")\n",
-    "\n",
+    "    \n",
+    "# Processamento: através do for é colocado o número da linha e uma quantidade M de /\n",
     "print(\"\")\n",
     "for row in range(1,n + 1):\n",
     "    print(row, end = \" \")\n",
@@ -357,7 +359,7 @@
     "    print(\"\")\n",
     "    \n",
     "\n",
-    "# Processamento:\n",
+    "\n",
     "\n",
     "# Saída:"
    ]
